@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2004/06/22 06:31:46 abs Exp $
+# $NetBSD: Makefile,v 1.24 2004/07/16 12:51:26 abs Exp $
 
-DISTNAME=	rconfig-0.33
+DISTNAME=	rconfig-0.34
 CATEGORIES=	sysutils
 MASTER_SITES=	http://www.mono.org/abs/tools/rconfig/
 EXTRACT_SUFX=	.tbz
@@ -11,13 +11,7 @@ COMMENT=	Manage configurations for many machines via rdist trees
 
 DEPENDS+=	fping-[0-9]*:../../net/fping
 DEPENDS+=	freerdist-[0-9]*:../../net/rdist6
-DEPENDS+=	srsh-[0-9]*:../../net/srsh
 
 USE_PERL5=	# defined
-
-do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/rconfig.pl ${PREFIX}/sbin/rconfig
-	${INSTALL_SCRIPT} ${WRKSRC}/probe.sh ${PREFIX}/libexec/rconfig_probe
-	${INSTALL_MAN} ${WRKSRC}/rconfig.8 ${PREFIX}/man/man8/rconfig.8
 
 .include "../../mk/bsd.pkg.mk"
