@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6572 2004/07/16 12:47:25 seb Exp $
+$NetBSD: CHANGES,v 1.6573 2004/07/16 12:52:09 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3411,3 +3411,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gd to 2.0.27 [adam 2004-07-16]
 	Added ap-auth-mysql-4.3.1 [jdolecek 2004-07-16]
 	Updated p5-Archive-Zip to 1.12 [seb 2004-07-16]
+	Updated rconfig to 0.34 [abs 2004-07-16]
+
